UserAnzeige unter Formular + Delete

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -20,4 +20,6 @@
 	<%= f.password_field :password_confirmation %>
 </p>
 <p><%= f.submit %></p>
+
+<%= link_to "Kontaktformuar", formular_path %>
 <% end %>
